# starling

./: .gitignore  CMakeLists.txt  data_prepare.sh
include/: aligned_file_reader.h  file_io_manager.h  freq_list.h  index.h  index_engine.h  linux_aligned_file_reader.h  percentile_stats.h  pq_flash_index.h  search_util.h  thread_pool.h  timer.h
include/disk_cache/: file_io_manager.h
include/disk_separation/: sep_disk_index.h
scripts/: config_dataset.sh  config_local.sh  config_sample.sh  run_benchmark.sh  unset.sh
src/: CMakeLists.txt  file_io_manager.cpp  generate_node_dist.cpp  index.cpp  index_engine_search.cpp  index_engine_store.cpp  linux_aligned_file_reader.cpp  page_search.cpp  page_search_revise.cpp  page_search_scaled.cpp  pq_flash_index.cpp
src/disk_cache/: file_io_manager.cpp  index_engine_search.cpp  index_engine_store.cpp
src/disk_separation/: sep_disk_index.cpp  sep_disk_index_search.cpp
src/page_search_impl/: beam_search_with_cache.cpp  page_search_starling.cpp  pipeline_PQ_filter.cpp
tests/: CMakeLists.txt  cal_disk_index_distance.cpp  search_disk_index.cpp  search_disk_index_use_engine.cpp
tests/utils/: CMakeLists.txt  bvecs_to_bin.cpp  compute_groundtruth.cpp  merge_gt.cpp  print_freq.cpp
